# logwise

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
logwise/: __init__.py  logwise.py
tests/: test_advanced.py
